# claude-co-bench

./: .gitignore  Makefile  README.md  pyproject.toml
evaluation/: __init__.py  controller.py  evaluate.py  exact_evaluate.py  simple_yield_evaluate.py  utils.py  yield_evaluate.py
prompts/: initial_prompt.md  initial_prompt.txt  system_prompt.txt
resources/: .gitignore  gurobi.py  ortools.py  scipy.py
scripts/: agent.py  agent_prompts.py  evaluate_code.py  get_problem.py
scripts/src/: controller.py  exact_evaluate.py  utils.py  yield_evaluate.py
src/: __init__.py  evaluate.py  simple_yield_evaluate.py
