[project]
name = "claude-co-bench"
version = "0.1.0"
authors = [
    {name = "Henry Robbins", email = "hw.robbins@gmail.com"}
]
description = "Claude CO-Bench evaluation framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tqdm>=4.66.0",
    "psutil>=5.9.0",
    "cloudpickle>=3.0.0",
    "anthropic>=0.40.0",
    "claude-agent-sdk>=0.1.0",
    "python-dotenv>=1.0.0",
    "gurobipy>=12.0.1,<13.0.0",
    "ortools>=9.15.0",
    "numpy>=2.4.0",
    "scipy>=1.17.0",
    "requests>=2.32.3",
    "beautifulsoup4>=4.12.2",
    "html2text>=2020.1.16",
    "langfuse>=3.13.0",
]

[dependency-groups]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
extend-ignore = ["E203", "E701"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["evaluation"]

[tool.mypy]
disallow_untyped_defs = true
disallow_incomplete_defs = true
